--- a/Mainpage.html
+++ b/Mainpage.html
@@ -10,37 +10,40 @@
 <body>
     <h1><a href="Mainpage.html">DBLAB_AR MENU TABLE</a></h1>
     <div id="grid">
-        <ol>
-            <li><a href="Gamachi.html">가마치통닭</a></li>
-            <li><a href="Gukbap.html">돼지국밥</a></li>
-            <li><a href="Mcdonald.html">맥도날드(맥스파이시 상하이 버거)</a></li>
-            <li><a href="Momstouch.html">맘스터치(인크레더블 버거)</a></li>
-            <li><a href="Subway.html">서브웨이(터키 베이컨 아보카도 샌드위치)</a></li>
-        </ol>
+        <div id="menu_background">
+            <ol>
+                <div id="menu">
+                    MENU
+                </div>
+                <br>
+                <li><a href="Gamachi.html">가마치통닭</a></li>
+                <li><a href="Gukbap.html">돼지국밥</a></li>
+                <li><a href="Mcdonald.html">맥도날드</a></li>
+                <li><a href="Momstouch.html">맘스터치</a></li>
+                <li><a href="Subway.html">서브웨이</a></li>
+            </ol>
+        </div>
         <div>
             <h2>AR_Menu Table</h2>
             <div id ="Mainpage">
-                AR 메뉴판은<br>
-                QR 코드 인식을 통한<br><br>
                 <div id="Mainpage_color">
                     <table id="mainpage">
                         <thead>
                             <tr>
-                                <td>3D 모델링화 음식</td>
+                                <td>3D 모델링 음식</td>
                             </tr>
                             <tr>
                                 <td>원재료</td>
                             </tr>
                             <tr>
-                                <td>3D 영양 성분</td>
+                                <td>영양 성분</td>
                             </tr>
                             <tr>
-                                <td>3D 알레르기 정보</td>
+                                <td>알레르기 정보</td>
                             </tr>
                         </thead>
                     </table>
                 </div>
-                <br>에 대한 정보를 제공해드립니다!
             </div>  
         </div>
     </div>
