--- a/Mcdonald.html
+++ b/Mcdonald.html
@@ -10,15 +10,22 @@
 <body>
     <h1><a href="Mainpage.html">DBLAB_AR MENU TABLE</a></h1>
     <div id="grid">
-        <ol>
-            <li><a href="Gamachi.html">가마치통닭</a></li>
-            <li><a href="Gukbap.html">돼지국밥</a></li>
-            <li><a href="Mcdonald.html"><font color="DodgerBlue">맥도날드(맥스파이시 상하이 버거)</a></li></font>
-            <li><a href="Momstouch.html">맘스터치(인크레더블 버거)</a></li>
-            <li><a href="Subway.html">서브웨이(터키 베이컨 아보카도)</a></li>
-            <img src="image/mcdonald.png" width="300" height="300" alt="맥스파이시 상하이버거" title="맥스파이시 상하이버거 이미지">
-        </ol>
+        <div id="menu_background">
+            <ol>
+                <div id="menu_select">
+                    MENU
+                </div>
+                <br>
+                <li><a href="Gamachi.html">가마치통닭</a></li>
+                <li><a href="Gukbap.html">돼지국밥</a></li>
+                <li><a class="mcdonald" href="Mcdonald.html">맥도날드</a></li>
+                <li><a href="Momstouch.html">맘스터치</a></li>
+                <li><a href="Subway.html">서브웨이</a></li>
+            </ol>
+        </div>
         <div>
+            <h5>이미지</h5>
+            <img id="image_mcdonald" src="image/mcdonald.png" width="250" height="180" alt="맥스파이시 상하이버거" title="맥스파이시 상하이버거 이미지">
             <h2>원재료</h2>
             <div id="ingredient_table">
                 <table>
@@ -47,7 +54,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>235</td><td>494</td><td>9</td><td>20</td><td>3</td><td>9</td><td>898</td>
+                            <td>235</td><td>494</td><td>9</td><td>20</td><td>4</td><td>9</td><td>898</td>
                         </tr>
                     </tbody>
                 </table>
